--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@fortawesome/fontawesome": "^1.1.7",
     "@fortawesome/fontawesome-free-brands": "^5.0.12",
     "@fortawesome/fontawesome-pro-regular": "^5.0.12",
+    "@vimeo/player": "^2.6.1",
     "bootstrap": "v4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
